--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .carousel-hider {
-    width: 600px;
+    width: 650px;
     overflow: hidden;
     float: left;
+    background-color: lightblue;
 }
  
 .carousel-list {    
@@ -9,6 +10,7 @@
     width: 10000px;
     padding: 0;
     position: relative;
+    background-color: blue;
 }
  
 .carousel-element {
@@ -18,7 +20,7 @@
 }
  
 .carousel-element img {
-    max-width: 100px;
+    max-width: 200px;
 }
  
 .carousel-arrow-left, .carousel-arrow-right {
